<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animation_text"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:id="@+id/anim_text"
        android:padding="50dp"
        />

    <Button
        android:id="@+id/btn_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale_btn_text"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/anim_text"
        />
    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_btn_text"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/anim_text"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:id="@+id/btn_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_btn_text"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/anim_text"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/btn_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha_btn_text"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/btn_translate"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
